<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/matches_icon"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/nearby_icon"
            android:title="@string/menu_nearby" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message_icon"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/friends_icon_gray"
            android:title="@string/menu_request" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/uploadicon_menu"
            android:title="@string/menu_images" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/premium_icon"
            android:title="@string/menu_premium" />
    </group>

    <item
        android:title="Connections">
        <menu>

            <item
                android:id="@+id/nav_view"
                android:icon="@drawable/view_icon"
                android:title="@string/menu_view" />
            <item
                android:id="@+id/nav_flirt"
                android:icon="@drawable/flirt_icon"
                android:title="@string/menu_flirt" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/fav_bnav_icon"
                android:title="@string/menu_favorites" />
            <item
                android:id="@+id/nav_photolike"
                android:icon="@drawable/photolike_icon"
                android:title="@string/menu_photolike" />
        </menu>
    </item>

    <item android:title="Others">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/setting_icon"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/notification_icon"
                android:title="@string/menu_notification" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/feedback"
                android:title="@string/menu_contactus" />

            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/aboutus_icon"
                android:title="@string/menu_aboutus" />

            <item
                android:id="@+id/nav_termsndcondition"
                android:icon="@drawable/termsconditions"
                android:title="@string/menu_termscon" />

            <item
                android:id="@+id/nav_privacypolicy"
                android:icon="@drawable/privacy"
                android:title="@string/menu_policy" />


            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/delete_icon"
                android:title="@string/deleteaccount" />


        </menu>
    </item>


</menu>

