<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_message_profile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/single_image_dummy"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_message_name"
        android:text="@string/source3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_message_body"
        android:text="@string/source4"
        android:background="@drawable/chat_design_bulb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/text_message_time"
        android:text="@string/source2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_body" />

</android.support.constraint.ConstraintLayout>