<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_plain"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backbutton"
                tools:ignore="NotSibling" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter" />

            <CheckBox
                android:id="@+id/ch_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="94dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toStartOf="@+id/ch_female"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <CheckBox
                android:id="@+id/ch_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.408"
                app:layout_constraintStart_toEndOf="@+id/ch_male"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/seekingfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/onlineuser"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_male" />


            <Spinner
                android:id="@+id/ch_seek_male"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekingfor" />


            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/comicsansms3"
                android:text="@string/age"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_seek_male" />

            <LinearLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dob" >

                <EditText
                    android:id="@+id/fromage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:hint="@string/fromage"
                    android:maxEms="3"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:fontFamily="@font/comicsansms3"
                    android:backgroundTint="@color/white"
                   />

                <EditText
                    android:id="@+id/toage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/toage"
                    android:layout_weight="1"
                    android:maxEms="3"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:fontFamily="@font/comicsansms3"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/premiumusers"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/comicsansms3"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age" />

            <Spinner
                android:id="@+id/premium_ed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium" />

            <ImageButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_border_rect"
                android:src="@drawable/login_btn_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_ed"
                app:layout_constraintVertical_bias="1.0" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>